Add account registration API and JSON OpenAPI documentation
